--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
   .line-violet { border-left-color: #7b2c90; } .text-violet { color: #7b2c90; }
   .line-pink { border-left-color: #e567a1; } .text-pink { color: #e567a1; }
   .line-magenta { border-left-color: #9f187a; } .text-magenta { color: #9f187a; }
-  .line-grey { border-left-color: #8b9292; } .text-grey { color: #8b9292; }
+  .line-grey { border-left-color: #70777e; } .text-grey { color: #70777e; }
   .line-airport-express { border-left-color: #f48024; } .text-airport-express { color: #f48024; }
   .line-aqua { border-left-color: #00bcd4; } .text-aqua { color: #00bcd4; }
-  .line-rapid { border-left-color: #c95100; } .text-rapid { color: #c95100; }
+  .line-rapid { border-left-color: #8b9292; } .text-rapid { color: #8b9292; }
 </style>
 </head>
 <body class="p-4">
@@ -652,6 +652,7 @@
 
 </body>
 </html>
+
 
 
 
